# EXECUTORCH

./: .gitignore  README.md  pyproject.toml  requirements.txt  strcuture.txt
benchmark/: run_benchmark.py
model/: export_resnet18.py
tests/: test_benchmark_logs.py  test_resnet18.py  test_resnet18_equivalence.py
